--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "ChakraDev": "craco start",
         "ChakraNetDev": "netlify dev",
+        "ChakraNetProdBuild": "netlify build",
         "build": "craco build",
         "test": "craco test --env=jsdom",
         "eject": "craco ejct",
