--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "ChakraDev": "craco start",
-        "ChakraNetDev": "netlify dev",
-        "ChakraNetProdBuild": "netlify build",
+        "ChakraDev": "cross-env REACT_APP_PHASE=0 craco start",
+        "ChakraNetDev": "cross-env REACT_APP_PHASE=0 netlify dev",
+        "ChakraNetProdBuild": "cross-env REACT_APP_PHASE=3 netlify build",
         "build": "craco build",
         "test": "craco test --env=jsdom",
         "eject": "craco ejct",
@@ -41,6 +41,7 @@
         "axios": "^0.26.1",
         "classnames": "2.3.1",
         "craco": "^0.0.3",
+        "cross-env": "^7.0.3",
         "ethers": "^5.6.1",
         "framer-motion": "^6.2.8",
         "jotai": "^1.6.1",
