--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "ChakraDev": "craco start",
-        "ChakraNetDev": "netlify dev",
+        "ChakraNetDev": "BROWSER=none netlify dev",
         "ChakraNetProdBuild": "netlify build",
         "build": "craco build",
         "test": "craco test --env=jsdom",
@@ -41,6 +41,7 @@
         "axios": "^0.26.1",
         "classnames": "2.3.1",
         "craco": "^0.0.3",
+        "cross-env": "^7.0.3",
         "ethers": "^5.6.1",
         "framer-motion": "^6.2.8",
         "jotai": "^1.6.1",
