--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@emotion/cache": "^11.7.1",
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
+        "@ethersproject/providers": "^5.6.2",
         "@fontsource/actor": "^4.5.6",
         "@fontsource/arsenal": "^4.5.6",
         "@fontsource/mina": "^4.5.6",
@@ -43,6 +44,7 @@
         "craco": "^0.0.3",
         "ethers": "^5.6.1",
         "framer-motion": "^6.2.8",
+        "immer": "^9.0.12",
         "jotai": "^1.6.1",
         "moment": "2.29.1",
         "react": "17.0.2",
