--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
+command = "npm run build"
 functions = "functions"
 
 #base = "/"
@@ -23,4 +24,8 @@ port = 3001
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
+  status = 200
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
