--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "react-big-calendar": "0.39.4",
         "react-dom": "17.0.2",
         "react-icons": "^4.2.0",
-        "react-perfect-scrollbar": "^1.5.8",
+        "react-custom-scroll": "^4.4.0",
         "react-router-dom": "^6.2.2",
         "react-scripts": "^5.0.0",
         "react-scroll-parallax": "^3.0.5",
