--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-apexcharts": "^1.4.0",
         "react-big-calendar": "0.39.4",
         "react-dom": "17.0.2",
+        "react-fast-marquee": "^1.3.1",
         "react-icons": "^4.2.0",
         "react-router-dom": "^6.2.2",
         "react-scripts": "^5.0.0",
