implements feature request & slmdb lambda

--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
         "craco": "^0.0.3",
         "ethers": "^5.6.1",
         "framer-motion": "^6.2.8",
+        "fs-extra": "^10.0.1",
         "immer": "^9.0.12",
         "jotai": "^1.6.1",
+        "mongodb": "^4.5.0",
         "moment": "2.29.1",
         "react": "17.0.2",
         "react-apexcharts": "^1.4.0",
