team page complete with "MTG" cards

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@ethersproject/providers": "^5.6.2",
         "@fontsource/actor": "^4.5.6",
         "@fontsource/arsenal": "^4.5.6",
+        "@fontsource/im-fell-english": "^4.5.3",
+        "@fontsource/im-fell-english-sc": "^4.5.3",
         "@fontsource/mina": "^4.5.6",
         "@fontsource/miriam-libre": "^4.5.6",
         "@fontsource/mochiy-pop-one": "^4.5.4",
@@ -33,6 +35,7 @@
         "@fontsource/mononoki": "^4.5.3",
         "@fontsource/montserrat": "^4.5.7",
         "@fontsource/raleway": "^4.5.5",
+        "@fontsource/zcool-xiaowei": "^4.5.6",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "@web3-react/network-connector": "^6.2.9",
