--- a/netlify.toml
+++ b/netlify.toml
@@ -29,3 +29,8 @@ port = 3001
   from = "/*"
   to = "/index.html"
   status = 200
+[[redirects]]
+  from = "http://*"
+  to = "https://:splat"
+  status = 301
+  force = true
