--- a/package.json
+++ b/package.json
@@ -44,21 +44,24 @@
         "apexcharts": "^3.33.2",
         "axios": "^0.26.1",
         "classnames": "2.3.1",
+        "copy-to-clipboard": "^3.3.1",
         "craco": "^0.0.3",
         "ethers": "^5.6.1",
         "framer-motion": "^6.2.8",
         "fs-extra": "^10.0.1",
         "immer": "^9.0.12",
         "jotai": "^1.6.1",
-        "mongodb": "^4.5.0",
         "moment": "2.29.1",
+        "mongodb": "^4.5.0",
         "react": "17.0.2",
         "react-apexcharts": "^1.4.0",
         "react-big-calendar": "0.39.4",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "17.0.2",
         "react-fast-marquee": "^1.3.1",
         "react-icons": "^4.2.0",
-        "react-router-dom": "^6.2.2",
+        "react-router-dom": "^6.3.0",
+        "react-router-hash-link": "^2.4.3",
         "react-scripts": "^5.0.0",
         "react-scroll-parallax": "^3.0.5",
         "react-scroll-to": "^3.0.0-beta.6",
