--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
         "mongodb": "^4.5.0",
         "react": "17.0.2",
         "react-apexcharts": "^1.4.0",
-        "react-big-calendar": "0.39.4",
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "17.0.2",
         "react-fast-marquee": "^1.3.1",
@@ -65,6 +64,7 @@
         "react-scripts": "^5.0.0",
         "react-scroll-parallax": "^3.0.5",
         "react-scroll-to": "^3.0.0-beta.6",
+        "resize-observer-polyfill": "^1.5.1",
         "web3": "^1.7.3",
         "webpack": "^5.72.0",
         "zustand": "^4.0.0-rc.1"
