--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "react": "17.0.2",
         "react-apexcharts": "^1.4.0",
         "react-copy-to-clipboard": "^5.1.0",
+        "react-device-detect": "^2.2.2",
         "react-dom": "17.0.2",
         "react-fast-marquee": "^1.3.1",
         "react-icons": "^4.3.1",
@@ -64,7 +65,6 @@
         "react-scripts": "^5.0.0",
         "react-scroll-parallax": "^3.0.5",
         "react-scroll-to": "^3.0.0-beta.6",
-        "resize-observer-polyfill": "^1.5.1",
         "web3": "^1.7.3",
         "webpack": "^5.72.0",
         "zustand": "^4.0.0-rc.1"
@@ -73,7 +73,8 @@
         "babel-plugin-emotion": "^11.0.0",
         "babel-plugin-macros": "^3.1.0",
         "babel-plugin-styled-components": "^2.0.6",
-        "node-polyfill-webpack-plugin": "^1.1.4"
+        "node-polyfill-webpack-plugin": "^1.1.4",
+        "resize-observer-polyfill": "^1.5.1"
     },
     "browser": {},
     "cellar": {
