--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@fontsource/montserrat": "^4.5.7",
         "@fontsource/raleway": "^4.5.5",
         "@fontsource/zcool-xiaowei": "^4.5.6",
+        "@onramper/widget": "^2.2.12",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "@web3-react/network-connector": "^6.2.9",
