--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "@fontsource/montserrat": "^4.5.7",
         "@fontsource/raleway": "^4.5.5",
         "@fontsource/zcool-xiaowei": "^4.5.6",
+        "@metamask/detect-provider": "^1.2.0",
         "@onramper/widget": "^2.2.12",
+        "@uniswap/widgets": "^1.1.1",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "@web3-react/network-connector": "^6.2.9",
@@ -51,7 +53,6 @@
         "framer-motion": "^6.2.8",
         "fs-extra": "^10.0.1",
         "immer": "^9.0.12",
-        "jotai": "^1.6.1",
         "moment": "2.29.1",
         "mongodb": "^4.5.0",
         "react": "17.0.2",
@@ -61,6 +62,7 @@
         "react-dom": "17.0.2",
         "react-fast-marquee": "^1.3.1",
         "react-icons": "^4.3.1",
+        "react-redux": "^7.2.8",
         "react-router-dom": "^6.3.0",
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "^5.0.0",
