--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "framer-motion": "^6.2.8",
         "fs-extra": "^10.0.1",
         "immer": "^9.0.12",
+        "jotai": "^1.3.7",
         "moment": "2.29.1",
         "mongodb": "^4.5.0",
         "react": "17.0.2",
